[B]0.9.8[/B]
Fix NextUp in info bug
Add all views for AEL

[B]0.9.7[/B]
Fix resolution flags not showing
Fix some alignment issues in dialogvideoinfo
Rearrange widget groups for Default Widgets to get people using library over skin helper
Add image gallery in videoinfo for extrafanart

[B]0.9.6[/B]
Many optimisations of skin code
Viewmode disabler
Add option to disable text in wall views
Fix flickering widget bug
Show fanart press up from viewmode menu

[B]0.9.5[/B]
Close osd after subs download.
On subs button, download if no subs to switch on.
(re)add fallback to UMS scraped ratings in videoinfo dialog

[B]0.9.4[/B]
Fix parentfolder list position
New osd design
Fix processinfo dialog
Fix clearart on seekbar
Remove unused skin settings
Add back button for mouse compatability mode

[B]0.9.3[/B]
Update widget code to use skinshortcut templates
Update Nextaired
Update NextUp postplay screen.

[B]0.9.2[/B]
Fix focus on re-entering home screen
Fix (hopefully) widget loading

[B]0.9.1[/B]
Add option to hide submenu
Add Arial font
Add Simple and Dark Glass color schemes

[B]0.9.0[/B]
Initial commit