@@ -1,6 +1,7 @@
 [B]0.9.8[/B]
 Fix NextUp in info bug
 Add all views for AEL
+Add "Extras" in video info for Extras folder
 
 [B]0.9.7[/B]
 Fix resolution flags not showing
